--- a/src/webapp/templates/portfolio_sim/dashboard.html
+++ b/src/webapp/templates/portfolio_sim/dashboard.html
@@ -103,7 +103,7 @@
         </div>
 
         <!-- portfolio value -->
-        <div class="mt-4 mb-3 container">
+        <div class="my-4 container">
             <h2 class="text-center">Your portfolio is worth <strong>${{ portfolio_value }}</strong> (${{cash_available}} in cash)</h2>
             <h6 class="text-center" data-toggle="tooltip" data-placement="bottom" title="Portfolio values are updated every 30 minutes when the market is open"> 
                 <u>As of <strong>{{ update_time }}</strong></u>
