--- a/src/webapp/templates/portfolio_sim/leaderboard.html
+++ b/src/webapp/templates/portfolio_sim/leaderboard.html
@@ -10,7 +10,7 @@
         data-history="{{ performance_history }}">
     </div>
 
-    <div class="p-5 bg-body-tertiary rounded-3 my-5">
+    <div class="container my-5 content-container">
         <h1 class="text-body-emphasis text-center">- Leaderboard -</h1>
         <h6 class="text-center" data-toggle="tooltip" data-placement="bottom" title="Portfolio values are updated every 30 minutes when the market is open"> 
             <u>Last Updated: <strong>{{ update_time }}</strong></u>
