--- a/src/webapp/templates/authentication/login.html
+++ b/src/webapp/templates/authentication/login.html
@@ -3,7 +3,7 @@
 {% block title %}Login{% endblock %}
 
 {% block content%}
-  <main class="form-login w-50 m-auto">
+  <main class="form-login m-auto">
     <form method="POST">
       <h1 class="h3 mb-4 fw-normal mt-5">User Login</h1>
 
