--- a/src/webapp/templates/authentication/sign_up.html
+++ b/src/webapp/templates/authentication/sign_up.html
@@ -3,7 +3,7 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block content %}
-  <main class="form-signup w-50 m-auto">
+  <main class="form-signup m-auto">
     <form method="POST">
       <h1 class="h3 mb-4 fw-normal mt-5">Sign Up</h1>
 
