fix ticker search

--- a/src/webapp/templates/portfolio_sim/search.html
+++ b/src/webapp/templates/portfolio_sim/search.html
@@ -21,7 +21,7 @@
         <form method="POST">
             <div class="input-group">
                 <input type="hidden" name="originalTicker" value="{{ ticker }}">
-                <input type="text" class="form-control" placeholder="Ticker" aria-label="Search Ticker" id="ticker" name="ticker" required>
+                <input type="text" class="form-control" placeholder="Ticker" aria-label="Search Ticker" id="searchTicker" name="searchTicker" required>
                 <div class="input-group-append">
                   <button class="btn btn-outline-secondary" type="submit">Search</button>
                 </div>
