fix mobile UI display

--- a/src/webapp/templates/portfolio_sim/leaderboard.html
+++ b/src/webapp/templates/portfolio_sim/leaderboard.html
@@ -13,20 +13,20 @@
     <div class="container my-5 content-container">
         <h1 class="text-body-emphasis text-center">- Leaderboard -</h1>
         <h6 class="text-center" data-toggle="tooltip" data-placement="bottom" title="Portfolio values are updated every 30 minutes when the market is open"> 
-            <u>Last Updated: <strong>{{ update_time }}</strong></u>
+            <u>Updated: <strong>{{ update_time }}</strong></u>
         </h6>
 
         <div class="my-4 w-100" id="historyPlot" style="display: block; box-sizing: border-box; height: 500px;"></div>
 
         <div class="container w-100 my-4">
-            <h3 class="mt-5">Top Performing Portfolios</h3>
+            <h4 class="mt-5">Top Performing Portfolios</h4>
             <div class="table-responsive">
                 <table class="table table-striped table-hover table-dark my-3" id="topPerformersTable"></table>
             </div>
         </div>
 
         <div class="container w-100 my-4">
-            <h3 class="mt-5">Todays Top Growers</h3>
+            <h4 class="mt-5">Todays Top Growers</h4>
             <div class="table-responsive">
                 <table class="table table-striped table-hover table-dark my-3" id="dailyPerformersTable"></table>
             </div>
