--- a/src/webapp/templates/portfolio_sim/rules.html
+++ b/src/webapp/templates/portfolio_sim/rules.html
@@ -4,10 +4,10 @@
 
 {% block content%}
     <div class="container my-5 content-container">
-        <h1 class="text-body-emphasis text-center">Portfolio simulation game rules</h1>
+        <h1 class="text-body-emphasis text-center">Portfolio simulation game</h1>
         <h5 class="text-center">Create an investment portfolio and watch it grow! <br><br></h5>
         <p class="lead">
-            You will be given some starting funds <small>(this money is fake and cannot be withdrawn)</small> to invest in the financial market. Currently, this only includes equity investments (aka stocks). Fixed income assets such as bonds and derivatives such as options are not included (yet???). Also, no shorting. ETFs are allowed as long as it is traded on a stock market. <br><br>
+            You will be given some starting funds <small>(this money is fake and cannot be withdrawn)</small> to invest in the financial market. Currently, this only includes equity investments (aka stocks). Fixed income assets such as bonds and derivatives such as options are not available (yet???). Also, no shorting. ETFs are allowed as long as it is traded on a stock market. <br><br>
             
             Track your performance over time and Buy/Sell your way to victory! Assert your dominance as a finance bro by out-performing other peoples portfolios! <br> <br>
 
