--- a/src/webapp/templates/portfolio_sim/buy.html
+++ b/src/webapp/templates/portfolio_sim/buy.html
@@ -4,13 +4,10 @@
 
 {% block content%}
 <div class="container my-5 content-container">
-    <h1 class="text-center">BUY: <strong>{{ info.company_name }}</strong> <br><br></h1>
-    <h3 class="text-center"><strong>{{ ticker }}</strong> is currently <strong>${{ info.price }} {{ info.currency }}</strong></h3>
-    <h6 class="text-center"> 
-        <u>Updated: <strong>{{ time }}</strong></u>
-    </h6>
-    
-    <div class="accordion mt-5" id="details">
+    <h1 class="text-center">BUY: <strong>{{ info.company_name }}</strong></h1>
+
+    <!-- listing details -->
+    <div class="accordion my-3" id="details">
         <div class="accordion-item">
             <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#listingDetails" aria-expanded="true" aria-controls="listingDetails">
@@ -27,12 +24,16 @@
         </div>
     </div>
 
+    <h3 class="text-center"><strong>{{ ticker }}</strong> is currently <strong>${{ info.price }} {{ info.currency }}</strong></h3>
+    <h6 class="text-center"> 
+        <u>Updated: <strong>{{ time }}</strong></u>
+    </h6>
+    
     <div class="container mt-5">
         <p class="lead text-center">
-            You have <strong>${{ available_cash }}</strong> available in cash, 
-            meaning you can buy a maximum of <strong>{{ max_shares }}</strong> shares right now. <br><br>
+            You have <strong>${{ available_cash }}</strong> available in cash <br>
 
-            How many shares would you like to buy?
+            How many shares would you like to buy? (max <strong>{{ max_shares }}</strong>)
         </p>
     </div>
 
