--- a/src/webapp/templates/portfolio_sim/dashboard.html
+++ b/src/webapp/templates/portfolio_sim/dashboard.html
@@ -16,10 +16,10 @@
         </div>
 
         <!-- header -->
-        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <div class="d-flex justify-content-around flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
             <h1 class="h1">{{ username }}'s Portfolio</h1>
             <div class="btn-toolbar mb-2 mb-md-0 button-container">
-                <button type="button" class="btn btn-lg btn-outline-secondary" onclick="openPopup('buyPopup')">Buy Stocks</button>
+                <button type="button" class="btn btn-outline-secondary" onclick="openPopup('buyPopup')">Buy Stocks</button>
                 <!-- buy popup -->
                 <div class="modal" id="buyPopup">
                     <div class="modal-dialog">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
 
-                <button type="button" class="btn btn-lg btn-outline-secondary" onclick="openPopup('sellPopup')">Sell Shares</button>
+                <button type="button" class="btn btn-outline-secondary" onclick="openPopup('sellPopup')">Sell Shares</button>
                 <!-- sell popup -->
                 <div class="modal" id="sellPopup">
                     <div class="modal-dialog">
@@ -74,7 +74,7 @@
                     </div>
                 </div>
 
-                <button type="button" class="btn btn-lg btn-outline-secondary" onclick="openPopup('searchPopup')">Ticker Lookup</button>
+                <button type="button" class="btn btn-outline-secondary" onclick="openPopup('searchPopup')">Ticker Lookup</button>
                 <!-- ticker search popup -->
                 <div class="modal" id="searchPopup">
                     <div class="modal-dialog">
@@ -106,7 +106,7 @@
         <div class="my-4 container">
             <h2 class="text-center">Your portfolio is worth <strong>${{ portfolio_value }}</strong> (${{cash_available}} in cash)</h2>
             <h6 class="text-center" data-toggle="tooltip" data-placement="bottom" title="Portfolio values are updated every 30 minutes when the market is open"> 
-                <u>As of <strong>{{ update_time }}</strong></u>
+                <u>Updated: <strong>{{ update_time }}</strong></u>
             </h6>
         </div>
 
@@ -116,7 +116,7 @@
         {% if has_holdings %}
             <!-- portfolio holdings -->
             <div class="container w-100">
-                <h3 class="mt-5">Portfolio Breakdown</h3>
+                <h4 class="mt-5">Portfolio Breakdown</h4>
                 <div class="table-responsive">
                     <table class="table table-striped table-hover table-dark" id="holdingsTable"></table>
                 </div>
@@ -129,7 +129,7 @@
             {% endif %}
             <!-- transaction history -->
             <div class="container w-100">
-                <h3 class="mt-5">Transaction History</h3>
+                <h4 class="mt-5">Transaction History</h4>
                 <div class="table-responsive">
                     <table class="table table-striped table-hover table-dark" id="transactionsTable"></table>
                 </div>
