--- a/src/webapp/templates/portfolio_sim/search.html
+++ b/src/webapp/templates/portfolio_sim/search.html
@@ -21,7 +21,7 @@
         <form method="POST">
             <div class="input-group">
                 <input type="hidden" name="originalTicker" value="{{ ticker }}">
-                <input type="text" class="form-control" placeholder="Ticker" aria-label="Search Ticker" id="searchTicker" name="searchTicker" required>
+                <input type="text" class="form-control" size="5" placeholder="Ticker" aria-label="Search Ticker" id="searchTicker" name="searchTicker" required>
                 <div class="input-group-append">
                   <button class="btn btn-outline-secondary" type="submit">Search</button>
                 </div>
@@ -36,12 +36,12 @@
     </h6>
 
     <!-- History plot -->
-    <div class="my-3 w-100" id="historyPlot" style="display: block; box-sizing: border-box; height: 500px;"></div>
+    <div class="my-3 w-100" id="historyPlot"></div>
 
     <!-- Performance Summary -->
+    <h4>Performance Summary</h4>
     <div class="table-responsive">
         <table class="table table-striped table-dark" id="performanceTable">
-            <h4 class="mt-5">Performance Summary</h4>
             <tr>
                 {% for key, value in performance.items() %}
                     <th scope="col">{{ key }}</th>
