--- a/src/webapp/templates/portfolio_sim/sell.html
+++ b/src/webapp/templates/portfolio_sim/sell.html
@@ -4,34 +4,35 @@
 
 {% block content%}
 <div class="container my-5 content-container">
-    <h1 class="text-center">SELL: <strong>{{ info.name }}</strong> <br><br></h1>
+    <h1 class="text-center mb-3">SELL: <strong>{{ info.name }}</strong></h1>
     <h3 class="text-center"><strong>{{ info.ticker }}</strong> is currently <strong>${{ current_price }} {{ info.currency }}</strong></h3>
     <h6 class="text-center"> 
         <u>Updated: <strong>{{ time }}</strong></u>
     </h6>
 
-    <div class="container mt-5 holding-details">
-        <div class="accordion mb-5" id="details">
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#listingDetails" aria-expanded="true" aria-controls="listingDetails">
-                        Holding Details
-                    </button>
-                </h2>
-                <div id="listingDetails" class="accordion-collapse collapse" data-bs-parent="#details">
-                    <div class="accordion-body">
-                        <ul class="list-group">
-                            {% for key, value in details.items() %}
-                                <li class="list-group-item"><strong>{{ key }}:</strong> {{ value }}</li>
-                            {% endfor %}
-                        </ul>
-                    </div>
+    <!-- holding details -->
+    <div class="accordion my-4" id="details">
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#listingDetails" aria-expanded="true" aria-controls="listingDetails">
+                    Holding Details
+                </button>
+            </h2>
+            <div id="listingDetails" class="accordion-collapse collapse" data-bs-parent="#details">
+                <div class="accordion-body">
+                    <ul class="list-group">
+                        {% for key, value in details.items() %}
+                            <li class="list-group-item"><strong>{{ key }}:</strong> {{ value }}</li>
+                        {% endfor %}
+                    </ul>
                 </div>
             </div>
         </div>
+    </div>
         
+    <div class="container my-3 holding-details">
         <p class="lead text-center">
-            You own <strong>{{ info.shares }}</strong> shares, how many would you like to sell?
+            You own <strong>{{ info.shares }}</strong> shares <br> how many would you like to sell?
         </p>
     </div>
 
