--- a/src/webapp/templates/base.html
+++ b/src/webapp/templates/base.html
@@ -73,7 +73,8 @@
           <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
             <img src="../static/icons/funance_logo.jpg" alt="FUNance logo" width="24" height="24">
           </a>
-          <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 FUNance v0.1.0</span>
+          <!-- app version -->
+          <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 FUNance v0.1.3</span>
         </div>
     
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
