--- a/src/webapp/templates/portfolio_sim/dashboard.html
+++ b/src/webapp/templates/portfolio_sim/dashboard.html
@@ -19,7 +19,7 @@
         <div class="d-flex justify-content-around flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
             <h1 class="h1">{{ username }}'s Portfolio</h1>
             <div class="btn-toolbar mb-2 mb-md-0 button-container">
-                <button type="button" class="btn btn-outline-secondary" onclick="openPopup('buyPopup')">Buy Stocks</button>
+                <button type="button" class="btn btn-outline-secondary" onclick="openPopup('buyPopup')">Buy</button>
                 <!-- buy popup -->
                 <div class="modal" id="buyPopup">
                     <div class="modal-dialog">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
 
-                <button type="button" class="btn btn-outline-secondary" onclick="openPopup('sellPopup')">Sell Shares</button>
+                <button type="button" class="btn btn-outline-secondary" onclick="openPopup('sellPopup')">Sell</button>
                 <!-- sell popup -->
                 <div class="modal" id="sellPopup">
                     <div class="modal-dialog">
