--- a/src/webapp/templates/portfolio_sim/search.html
+++ b/src/webapp/templates/portfolio_sim/search.html
@@ -65,6 +65,7 @@
             </h2>
             <div id="summaryDetails" class="accordion-collapse collapse" data-bs-parent="#summary">
                 <div class="accordion-body">
+                    <h6><strong>Sector:</strong> {{ info.sector }}</h6><br>
                     <h6><strong>Industry:</strong> {{ info.industry }}</h6><br>
                     <h6><strong>Summary:</strong></h6>
                     <p>{{ info.company_summary }}</p>
