--- a/src/webapp/templates/portfolio_sim/leaderboard.html
+++ b/src/webapp/templates/portfolio_sim/leaderboard.html
@@ -16,19 +16,19 @@
             <u>Updated: <strong>{{ update_time }}</strong></u>
         </h6>
 
-        <div class="my-4 w-100" id="historyPlot" style="display: block; box-sizing: border-box; height: 500px;"></div>
+        <div class="w-100 mt-3" id="historyPlot" style="height: 400px;"></div>
 
         <div class="container w-100 my-4">
-            <h4 class="mt-5">Top Performing Portfolios</h4>
+            <h4>Top Performing Portfolios</h4>
             <div class="table-responsive">
-                <table class="table table-striped table-hover table-dark my-3" id="topPerformersTable"></table>
+                <table class="table table-striped table-hover table-dark" id="topPerformersTable"></table>
             </div>
         </div>
 
         <div class="container w-100 my-4">
-            <h4 class="mt-5">Todays Top Growers</h4>
+            <h4>Todays Top Growers</h4>
             <div class="table-responsive">
-                <table class="table table-striped table-hover table-dark my-3" id="dailyPerformersTable"></table>
+                <table class="table table-striped table-hover table-dark" id="dailyPerformersTable"></table>
             </div>
         </div>
         
