--- a/src/webapp/templates/portfolio_sim/dashboard.html
+++ b/src/webapp/templates/portfolio_sim/dashboard.html
@@ -119,20 +119,18 @@
         
         {% if has_holdings %}
             <!-- portfolio holdings -->
-            <div class="container w-100">
-                <div class="d-flex justify-content-around flex-wrap flex-md-nowrap align-items-center border-bottom mb-5">
-                        <h4>Sector Breakdown</h4>
-                        <div class="pie-chart" id="sectorPie" style="height: 400px;"></div>
-                        
-                        <h4>Portfolio Breakdown</h4>
-                        <div class="pie-chart" id="holdingsPie" style="height: 400px;"></div>
-                </div>
+            <div class="d-flex justify-content-around flex-wrap align-items-center border-bottom mb-5 w-100">
+                <h4>Sector Breakdown</h4>
+                <div class="pie-chart" id="sectorPie"></div>
+                
+                <h4>Portfolio Breakdown</h4>
+                <div class="pie-chart" id="holdingsPie"></div>
+            </div>
 
-                <!-- holdings table -->
-                <h4>My Holdings</h4>
-                <div class="table-responsive">
-                    <table class="table table-striped table-hover table-dark" id="holdingsTable"></table>
-                </div>
+            <!-- holdings table -->
+            <h4>My Holdings</h4>
+            <div class="table-responsive">
+                <table class="table table-striped table-hover table-dark" id="holdingsTable"></table>
             </div>
         {% endif %}
 
